feat: token swagger ignore
